// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactBlock /> renders properly 1`] = `
<div>
  <section
    class="jsx-1059500243 container"
    data-testid="contactBlock_section"
  >
    <div
      class="jsx-1059500243 wrapper genericMargins"
    >
      <div
        class="jsx-1059500243 titleBlock"
      >
        <strong
          class="jsx-1059500243 fontXXL"
        >
          Con
        </strong>
        <strong
          class="jsx-1059500243 fontXXL"
        >
          Ver
        </strong>
        <strong
          class="jsx-1059500243 fontXXL"
        >
          Sar
        </strong>
      </div>
      <div
        class="jsx-1059500243 textBlock"
      >
        <p
          class="jsx-1059500243 bodyText bodyText--white"
          data-testid="textShadowBlock_textBlock1"
        >
          Precisa de ajuda com o seu negócio, projeto ou marca?
        </p>
        <p
          class="jsx-1059500243 bodyText bodyText--white"
        >
          Envie-me um email e vamos conversar. Podemos começar o quanto antes a definir uma estratégia para social media de acordo com os seus objetivos.
        </p>
        <p
          class="jsx-1059500243 bodyText bodyText--white"
        >
          Estou ainda disponível para dar consultoria em social media e partilhar todos os passos e dicas de que precisa para cumprir os seus objetivos.
        </p>
        <div
          class="jsx-477676945 buttonWrapper"
        >
          <div
            class="jsx-477676945 buttonBackground"
          >
            <a
              class="jsx-477676945 buttonComponent fontS buttonComponentLowercase"
              href="mailto:catarina@aguareladigital.com"
              rel="noreferrer"
              target="_blank"
            >
              catarina@aguareladigital.com
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ContactBlock /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-1059500243 container"
    data-testid="contactBlock_section"
  >
    <div
      class="jsx-1059500243 wrapper genericMargins"
    >
      <div
        class="jsx-1059500243 titleBlock"
      >
        <strong
          class="jsx-1059500243 fontXXL"
        >
          Con
        </strong>
        <strong
          class="jsx-1059500243 fontXXL"
        >
          Tac
        </strong>
        <strong
          class="jsx-1059500243 fontXXL"
        >
          Tme
        </strong>
      </div>
      <div
        class="jsx-1059500243 textBlock"
      >
        <p
          class="jsx-1059500243 bodyText bodyText--white"
          data-testid="textShadowBlock_textBlock1"
        >
          Need help with your business, project or brand?
        </p>
        <p
          class="jsx-1059500243 bodyText bodyText--white"
        >
          Send me an email and let's talk. We can start as soon as possible defining a social media strategy that meets your objectives.
        </p>
        <p
          class="jsx-1059500243 bodyText bodyText--white"
        >
          I am also available to provide social media consulting and share all the tips you need to fulfill your goals.
        </p>
        <div
          class="jsx-477676945 buttonWrapper"
        >
          <div
            class="jsx-477676945 buttonBackground"
          >
            <a
              class="jsx-477676945 buttonComponent fontS buttonComponentLowercase"
              href="mailto:catarina@aguareladigital.com"
              rel="noreferrer"
              target="_blank"
            >
              catarina@aguareladigital.com
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ContactBlock /> renders properly in English and mobile 1`] = `
<div>
  <section
    class="jsx-1059500243 container"
    data-testid="contactBlock_section"
  >
    <div
      class="jsx-1059500243 wrapper genericMargins"
    >
      <div
        class="jsx-1059500243 titleBlock"
      >
        <p
          class="jsx-1059500243 fontL"
        >
          ConTact
        </p>
      </div>
      <div
        class="jsx-1059500243 textBlock"
      >
        <p
          class="jsx-1059500243 bodyText bodyText--white"
          data-testid="textShadowBlock_textBlock1"
        >
          Need help with your business, project or brand?
        </p>
        <p
          class="jsx-1059500243 bodyText bodyText--white"
        >
          Send me an email and let's talk. We can start as soon as possible defining a social media strategy that meets your objectives.
        </p>
        <p
          class="jsx-1059500243 bodyText bodyText--white"
        >
          I am also available to provide social media consulting and share all the tips you need to fulfill your goals.
        </p>
        <div
          class="jsx-477676945 buttonWrapper"
        >
          <div
            class="jsx-477676945 buttonBackground alignCenter"
          >
            <a
              class="jsx-477676945 buttonComponent fontS buttonComponentLowercase"
              href="mailto:catarina@aguareladigital.com"
              rel="noreferrer"
              target="_blank"
            >
              catarina@aguareladigital.com
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ContactBlock /> renders properly on mobile 1`] = `
<div>
  <section
    class="jsx-1059500243 container"
    data-testid="contactBlock_section"
  >
    <div
      class="jsx-1059500243 wrapper genericMargins"
    >
      <div
        class="jsx-1059500243 titleBlock"
      >
        <p
          class="jsx-1059500243 fontL"
        >
          ConVerSar
        </p>
      </div>
      <div
        class="jsx-1059500243 textBlock"
      >
        <p
          class="jsx-1059500243 bodyText bodyText--white"
          data-testid="textShadowBlock_textBlock1"
        >
          Precisa de ajuda com o seu negócio, projeto ou marca?
        </p>
        <p
          class="jsx-1059500243 bodyText bodyText--white"
        >
          Envie-me um email e vamos conversar. Podemos começar o quanto antes a definir uma estratégia para social media de acordo com os seus objetivos.
        </p>
        <p
          class="jsx-1059500243 bodyText bodyText--white"
        >
          Estou ainda disponível para dar consultoria em social media e partilhar todos os passos e dicas de que precisa para cumprir os seus objetivos.
        </p>
        <div
          class="jsx-477676945 buttonWrapper"
        >
          <div
            class="jsx-477676945 buttonBackground alignCenter"
          >
            <a
              class="jsx-477676945 buttonComponent fontS buttonComponentLowercase"
              href="mailto:catarina@aguareladigital.com"
              rel="noreferrer"
              target="_blank"
            >
              catarina@aguareladigital.com
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
